tests/language_modules/08_routines/invalid_semantics/function_missing_return.vf
module FunctionMissingReturn

function read() returns Integer
is
    check true
end read

end FunctionMissingReturn